# sandbox

./: .gitignore  README.md  aliasing.c  interleaved_boost.m
agent/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
agent/.github/: copilot-instructions.md
agent/cmake/: CompilerOptions.cmake
agent/cmake/toolchains/: arm-none-eabi-gcc.cmake
agent/include/: gpio_input_mock.hpp  gpio_output_mock.hpp  i_async_service.hpp  i_gpio_input.hpp  i_gpio_output.hpp  i_service.hpp  i_sync_service.hpp  i_time_source.hpp  pid_controller.hpp  slew_rate_limiter.hpp
agent/include/mocks/: mock_async_service.hpp  mock_sync_service.hpp  mock_time_source.hpp
agent/src/: pid_controller.cpp  slew_rate_limiter.cpp
agent/tests/: CMakeLists.txt  test_pid_controller.cpp  test_slew_rate_limiter.cpp
agent/tools/: check_single_return.sh
algorithms/golang/: __debug_bin4260186734  go.mod
algorithms/golang/main/: main.go
algorithms/golang/tour/: channels.go  eq_binary_tree.go  errors.go  fib.go  image_iface.go  infinite_reader.go  linked_list.go  maps.go  pic.go  select.go  sqrt.go  stringer.go  web_crawler.go
algorithms/golang/warmup/: grading_students_test.go  line_jump.go
c/: a.out  q1.c  q2.c  q3.c  q6.c
c/hackerrank/: q10.c  q7.c  q8.c  q9.c
c/pid/: Makefile  main.c  pid  pid.c  pid.h
cython/: ljbillards.py  ljfluid.cpp  ljfluid.py  plot_samples.py
cython/cython1/: lj.c  ljfluid.py
cython/cython2/: c_lj.cpp  lj.pyx  ljfluid.py
hackerrank/: grading_students.go  q4.c  q5.c  q9-1.c
hackerrank/golang/: go.mod
hackerrank/golang/main/: main.go
hackerrank/golang/warmup/: apples_and_oranges.go  apples_and_oranges_test.go  grading_students.go
